Fixed the issue with the drag and drop not showing

--- a/styles/main.less
+++ b/styles/main.less
@@ -151,275 +151,7 @@ body {
   text-align: center;
 }
 
-// ///////////////////// Common /////////////////////
-// /* Set full screen */
-// html,body { 
-//   height: 100%;
-//   //font-family: 'Kanit', sans-serif;
-//   font-family: 'Cuprum', sans-serif;
-//   color: @primary-color; 
-// }
-
-// body {
-//   background: url('../images/bg_beach.jpg') no-repeat center center fixed; 
-//   -webkit-background-size: cover;
-//   -moz-background-size: cover;
-//   -o-background-size: cover;
-//   background-size: cover;
-// }
-
-// .clearfix {
-//   display: block; clear: both;
-// }
-
-// a {
-//   cursor: pointer;
-// }
-
-// ///////////////////// Header /////////////////////
-// .logo {
-//   float: left;
-//   width: 250px;
-//   height: 120px;
-//   margin-top: 25px;
-//   margin-left: 15px;
-//   transform: rotate(-10deg);
-// }
-
-// nav {
-//   float: right;
-//   margin-top: 10px;
-//   margin-right: 20px;
-// }
-
-
-// ///////////////////// Container /////////////////////
-// .container {
-//   width: 100%;
-//   // background:fade(black, 50%); 
-// }
-
-// .container h1 {
-//   font-size: @default-font-size * 4;
-//   padding: 35px 0;
-//   font-weight: normal;
-//   text-align: center;
-//   text-shadow: 4px 4px 6px #777;
-// }
-
-// h1.slogon {
-//   font-family: 'Mr Dafoe', cursive;  
-// }
-// ///////////////////// Upcoming Trips /////////////////////
-// .upcoming-trips-header {
-//   margin-left: 10px;
-//   margin-top: 110px;
-// }
-// .upcoming-trips-header h4{
-//   font-size: @default-font-size * 2.5;
-//   float: left;
-//   font-weight: normal;
-//   color: @primary-color;
-//   text-shadow: 4px 4px 6px #777;
-  
-// }
-
-// ///////////////////// Filter Control /////////////////////
-// .filter-control {
-//   float: left;
-//   margin-left: 30px;
-//   height: 60px;
-//   padding: 5px 15px;
-//   border: 1px solid black;
-// }
-
-// .filter-control div {
-//   display: inline-block;
-//   width: 50px;
-//   height: 55px;
-//   margin-left: 10px;
-//   background: fade(red, 40%);
-// }
-
-// .filter-control div:first-child {
-//   margin-left: 0;
-// }
-
-// ///////////////////// Trip Card /////////////////////
-// .trips-holder {
-//   margin-top: 60px;
-//   padding: 0 10px;  
-// }
-
-// .card {
-//   display: inline-block;
-//   background: fade(darken(@primary-color, 40%), 80%);
-// }
-
-// .info-trip-card {
-//   width: 250px;
-//   height: 300px;
-//   padding: 10px;
-//   color: darken(@primary-color, 90%);
-//   margin-right: 30px;
-//   position: relative;
-// }
-
-// .card h4 {
-//   font-size: 1.5em;
-//   border-bottom: 2px solid;
-// }
-
-// .card p {
-//   margin-top: 10px;
-//   text-indent: 10px;
-// }
-
-// .card table {
-//   margin-top: 20px;
-// }
-
-// .card table td {
-//   padding: 5px;
-// }
-
-// .trip-card-actions {
-//   position: absolute;
-//   bottom: 15px;
-//   right: 15px;
-// }
-
-// .trip-card-actions button {
-//   height: 70px;
-//   width: 70px;
-//   border: none;
-//   border-radius: 40px;
-//   background: @primary-color;
-//   color: darken(@primary-color, 90%);
-//   font-size: 1em;
-//   cursor: pointer;
-// }
-
-// ///////////////////// trip-creation /////////////////////
-// .view-container {
-//   width: 1024px;
-//   height: 750px;
-//   margin: 0 auto;
-//   background: fade(black, 40%);
-// }
-
-// ///////////////////// destination-card ////////////////////
-// .destination-card {
-//   width: 40%;
-//   height: 100px;
-//   background: red;
-// }
-
-// // .side-menu-bar {
-// //   float: left;
-// //   width: 15%;
-// //   min-width: 200px;
-// //   height: 100%;
-// //   position: relative;
-// // }
-
-// // .side-menu-bar ul {
-// //   width: 100%;
-// //   top: 50%;
-// //   position: absolute;
-// //   margin-top: -100%;
-// //   background: fade(black, 40%);
-// // }
-
-// // .side-menu-bar ul li {
-// //   line-height: @default-font-size * 2;
-// //   font-size: @default-font-size * 3;
-// //   cursor: pointer;
-// //   font-weight: normal;
-// //   text-align: center;
-// //   color: darken(@primary-color, 20%)
-// //   // -webkit-text-stroke-width: 2px; 
-// //   // -webkit-text-stroke-color: #6d5e51; 
-// //   // -webkit-text-stroke-color: darken(@primary-color, 50%); 
-// // }
-
-// // .side-menu-bar ul li:hover, .side-menu-bar ul li.active {
-// //   background-color: darken(@primary-color,20%);
-// //   color: darken(@primary-color, 70%);
-// //   opacity: 0.9;
-// //   transition: background 300ms ease;
-// // }
-
-// // .side-menu-bar ul li.not-available {
-// //   cursor: not-allowed;
-// // }
-
-// // h1 {
-// //   font-size: @default-font-size * 3;
-// //   font-weight: normal;
-// // }
-
-// // h3 {
-// //   font-size: @default-font-size * 2;
-// //   font-weight: normal;
-// // }
-
-// // h4 {
-// //   font-size: @default-font-size * 1.1;
-// //   font-weight: normal;
-// // }
-
-// // .content-area {
-// //   float: left;
-// //   width: 83%; 
-// //   min-width: 800px - 21px;
-// //   padding: 5px 10px;
-// //   height: 100%;
-// //   position: relative;
-// // }
-
-// // .content-area:after {
-// //   float: clear;
-// // }
-
-// // .view-holder {
-// //   top: 50%;
-// //   margin-top: -150px;
-// //   height: 300px;
-// //   position: absolute;
-// // }
-// // .create-trip-card {
-// //   height: 200px;
-// //   width: 200px;
-// //   border-radius: 150px;
-// //   text-align: center;
-// //   vertical-align: top;
-// //   margin-top: 75px;
-// //   cursor: pointer;
-// // }
-
-// // .create-trip-card h4 {
-// //   font-size: 14em;
-// //   margin-top: -85px;
-// //   border: none;
-// // }
-
-// // /* Create Trip stuff */
-// // .form-step {
-// //   width: 700px;
-// //   height: 500px;
-// //   padding: 10px;
-// // }
-
-// // // .view-holder {
-// // //   position: absolute;
-// // //   padding: 10px 20px;
-// // //   bottom: 100px;
-// // //   right: 150px;
-// // //   height: 450px;
-// // //   width: 600px;
-// // //   border: 2px #6d5e51 solid;
-// // //   background: #8c7f70;
-// // //   border-radius: 40px;
-// // //   opacity: .95;
-// // // }
+.drop-zone {
+    border: 5px black solid;
+    min-height: 100px;
+}
